// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScheduleItem when passed an assembly renders correctly with valid props 1`] = `
<li
  className="mealSchedule-bd-itemList-item"
>
  <ul
    className="stereo"
  >
    <li>
      <a
        className="link"
        href="meal_schedules/1/edit"
      >
        Souvlaki
      </a>
    </li>
    <li>
      <ul
        className="hlist"
      >
        <li>
          <button
            className="icon-btn qa-scheduleItem-addToOrder-1"
            onClick={[Function]}
            type="button"
          >
            <span
              className="icon icon-cart-check"
            />
          </button>
        </li>
        <li>
          <button
            className="icon-btn js-mealSchedule-remove"
            onClick={[Function]}
            type="button"
          >
            <span
              className="icon icon-trashcan"
            />
          </button>
        </li>
      </ul>
    </li>
  </ul>
</li>
`;

exports[`ScheduleItem when passed an item renders correctly with valid props 1`] = `
<li
  className="mealSchedule-bd-itemList-item"
>
  <ul
    className="stereo"
  >
    <li>
      <a
        className="link"
        href="meal_schedules/1/edit"
      >
        Agave Syrup
      </a>
    </li>
    <li>
      <ul
        className="hlist"
      >
        <li>
          <button
            className="icon-btn qa-scheduleItem-addToOrder-1"
            onClick={[Function]}
            type="button"
          >
            <span
              className="icon icon-cart-check"
            />
          </button>
        </li>
        <li>
          <button
            className="icon-btn js-mealSchedule-remove"
            onClick={[Function]}
            type="button"
          >
            <span
              className="icon icon-trashcan"
            />
          </button>
        </li>
      </ul>
    </li>
  </ul>
</li>
`;
